fix on mobile

--- a/src/Components/Background/Background.css
+++ b/src/Components/Background/Background.css
@@ -35,7 +35,7 @@
 
 @media screen and (max-width: 960px) {
     .background-header {
-        font-size: 60px;
+        font-size: 48px;
         padding: 0;
         padding-top: 80%;
     }
